Fixes missing background color on Take 5 sections

--- a/_sass/_theme-hacks.scss
+++ b/_sass/_theme-hacks.scss
@@ -482,7 +482,7 @@ header.global {
 
 .content-wrapper#content {
   padding-bottom: 1em;
-  background-color: $gym-white;
+  background-color: $gym-light-page-background;
 }
 
 div.wrapper-footer {
